Separators in Clippings menu (issue #414)
- Ported from Clippings for Thunderbird 7.0

--- a/wx-src/pages/clippingsMgr.css
+++ b/wx-src/pages/clippingsMgr.css
@@ -1365,7 +1365,7 @@ body[data-locale="de"] #import-dlg #restore-backup-warning > p {
 
 #export-dlg {
     --width: 360px;
-    --height: 306px;
+    --height: 316px;
     top: 22px;
 }
 
@@ -1387,7 +1387,7 @@ body[data-locale="de"] #export-dlg #export-format-list-label {
 
 #export-dlg fieldset {
     margin-top: 6px;
-    margin-bottom: 12px;
+    margin-bottom: 8px;
     height: 106px;
 }
 
